修改菜单和添加页面

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vue-style-loader": "^1.0.0",
     "vuex": "^2.0.0",
